--- a/css/login.css
+++ b/css/login.css
@@ -7,9 +7,21 @@ body {
 
 .login-form {
 	margin-top: 50vh;
-	height: 300px;
+	padding: 20px 30px;
 
-	background-color: #fff;
+	background-color: rgba(0, 0, 0, .9);
+
+	color: #fff;
 
 	transform: translateY(-50%);
+}
+
+.login-form h1{
+	margin: 0 0 5px;
+}
+
+.login-form h2{
+	margin: 0 0 30px;
+
+	font-size: 1em;
 }
