--- a/css/index.css
+++ b/css/index.css
@@ -9,12 +9,13 @@
 
 .perfil {
 	padding: 10px;
+	width: 300px;
 }
 
 .perfil li:first-child {
 	font-size: 1.3em;
 	font-weight: bold;
-	margin-bottom: 10px;
+	margin-bottom: 2px;
 }
 
 @media (max-width: 767px) {
